# tactoairpods

./: .gitignore  AgentPrompt.md  README.md  index.html
MCPs/kontext/: .env.example  .gitignore  README.md  check-tools.js  package-lock.json  package.json  test-agent.js
MCPs/kontext/src/: agent.js  memory-manager.js
TechEuropeMunich/: LLM_SETUP.md  README.md  autonomous_agent.py  chat.py  main.py  pyproject.toml  simple_chat.py  smart_chat.py  start.sh  start_web.sh  test_agent.py  test_llm.py  web_server.py
TechEuropeMunich/examples/: supplier_contract.txt  supplier_data.csv
TechEuropeMunich/mcp_client/: __init__.py  client.py
TechEuropeMunich/mcp_host/: __init__.py  host.py
TechEuropeMunich/mcp_host/tools/: __init__.py  analyze_supplier.py  generate_feedback.py  llm_service.py  simulate_supplier_response.py  summarize_negotiation_transcript.py  vector_db.py
TechEuropeMunich/uploads/: Becker_Industrial_Coatings_GmbH.csv  Kraus_Automotive_Systems_AG.csv
TechEuropeMunich/vector_db/: chroma.sqlite3
TechEuropeMunich/web/: index.html
frontend/: README.md  package-lock.json  package.json  proxy-server.cjs  proxy-server.js  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/beyond-presence-avatars/: create-agent.js
frontend/src/components/: AICoachPage.tsx  CoachSetupPage.tsx
frontend/src/hooks/: useFinancialContext.ts
frontend/src/pages/: Index.tsx
src/components/: AICoachPage.tsx
src/pages/: Index.tsx
